# different

./: .gitignore  async_net_scanner.py  decorators.py  dockerhub.py  forest.py  goodgame.py  linked_list.py  requiremetns.txt  snake.py  sqlalchemy  sqlalchemy.py  threaded_PI_count_script.py  twitch_bonus.py
celery_log_docker/: Dockerfile  celery_config.py  docker-compose.yml  main.py  pyproject.toml
celery_log_docker/config/: .env  celeryconfig.py
django_accounts_app/: README.md  admin.py  apps.py  forms.py  managers.py  models.py  tasks.py  urls.py  utils.py  views.py
django_accounts_app/management/commands/: create_superuser.py
django_accounts_app/migrations/: create_accounts_models.py
django_accounts_app/templates/registration/: info.html  login.html  message.html  password_change_done.html  password_change_form.html
django_accounts_app/templates/users/: dashboard.html  register.html
get-gitlab-projects/: get_projects.py
get-gitlab-projects/get_project_core/: settings.py
mosgortrans/: .env.template  mos_gor.py  pyproject.toml
python-poetry/: Dockerfile  docker-compose.yml  pyproject.toml
python-poetry/poetry/: pyproject.toml  requirements.txt
sqlalchemy_study/: .gitignore  Makefile  README.md  docker-compose.docker.yaml  docker-compose.mysql.yaml  docker-compose.postgres.yaml  pyproject.toml
sqlalchemy_study/docker/: Dockerfile
sqlalchemy_study/docker/scripts/: alembic-init-migrate.sh  docker-entrypoint.sh
sqlalchemy_study/src/: alembic.ini  main.py
sqlalchemy_study/src/config/: .env.template
sqlalchemy_study/src/data/: factories.py  fill_data.py  get_data.py
sqlalchemy_study/src/db/: base.py  dependencies.py  meta.py  utils.py
sqlalchemy_study/src/db/models/: __init__.py  cadre_movements.py  coin.py  department.py  skills.py  user.py
sqlalchemy_study/src/migrations/: env.py
sqlalchemy_study/src/migrations/versions/: mysql_init_migrations.py  postgres_init_migrations.py
sqlalchemy_study/src/settings/: __init__.py  logger.py  settings.py
