[tool.poetry]
name = "telegrambot"
version = "0.1.0"
description = "my bot for telegram"
authors = ["Dmitry Afanasyev <Balshbox@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
telebot = "0.0.4"
psycopg2-binary = "^2.8"
python-decouple = "^3.3"
requests = "2.23.0"
pytelegrambotapi = "3.6.6"
dependency_injector = "3.15.6"
geocoder = "1.38.1"
jinja2 = "2.11.1"
ciso8601 = "2.1.3"
cachetools = "4.0.0"
pandas = "1.0.3"
flask = "1.1.2"
sqlalchemy = "1.3.22"

django = "^3.1"
django-split-settings = "^1.0"
django-health-check = "^3.16"
celery = "^5.0.4"
django-celery-results = "^2.0.0"
django-celery-beat = "^2.1.0"
eventlet = "0.30.0"
django-constance="2.8.0"
redis="3.5.3"
django-picklefield="3.0.1"
docutils="0.16"
whitenoise = "^5.2.0"
gunicorn = "^20.0"
bcrypt = "^3.2"
django-debug-toolbar = "^3.2"
django-querycount = "^0.7"
django-extra-checks = "^0.8"
django-coverage-plugin = "^1.8"
nplusone = "^1.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
