[tool.poetry]
name = "telegrambot"
version = "0.1.0"
description = "my bot for telegram"
authors = ["Dmitry Afanasyev <Balshbox@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
telebot = "0.0.4"
psycopg2-binary = "^2.8"
python-decouple = "^3.3"
requests = "2.23.0"
pytelegrambotapi = "3.6.6"
dependency_injector = "3.15.6"
geocoder = "1.38.1"
jinja2 = "2.11.1"
ciso8601 = "2.1.3"
cachetools = "4.0.0"
pandas = "1.0.3"
flask = "1.1.2"
sqlalchemy = "1.3.22"



[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
