[tool.poetry]
name = "create requirements"
version = "0.1.2"
description = "poetry requiremts creation"
authors = ["Dmitry Afanasyev <Balshbox@gmail.com>"]

[tool.poetry.dependencies]
Python="3.7.9"
asgiref="3.2.10"
Django="3.0.7"
django-admin-sortable2="0.7.6"
django-autoslug="1.9.7"
django-ckeditor="5.9.0"
django-constance="2.7.0"
django-cors-headers="3.4.0"
django-editorjs-field="0.0.3"
django-environ="0.4.5"
django-filter="2.3.0"
django-js-asset="1.2.2"
django-modeltranslation="0.15"
djangorestframework="3.11.0"
install="1.3.3"
Pillow="7.1.2"
protobuf="3.5.1"
psycopg2-binary="2.8.5"
pytz="2020.1"
redis="3.5.3"
six="1.14.0"
sqlparse="0.3.1"
pytils="0.3"
pdfkit="0.6.1"
django-next-prev="1.0.1"
requests="2.24.0"
urllib3="1.25.10"
django-axes = "^*"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
